# HKCCCU_APP-2024.09rev

./: .env  Cargo.toml  README.md  build.sh  diesel.toml
htdocs/: index.html  item.html  login.html  search.html
migrations/2024-07-18-205106_create_posts/: down.sql  up.sql
src/: database.rs  db.rs  main.rs  models.rs  schema.rs  test_main.rs
