[package]
name = "ast20207"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
diesel = { version = "2.2.0", features = ["mysql"] }
dotenvy = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = { version = "1.35.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
